@@ -1,3 +1,8 @@
+2010-04-01 Starboy Qi <starboy.qi@gmail.com>
+
+    * Fix multimedia package error in Fedora.
+    * Add VirtualBox open source edition for Fedora.
+
 2010-04-01 MA Yue <velly.empire@gmail.com>
 
     * Improve the 'start here' icon setting. 
